# shimeri

./: .gitignore  404.html  AGENTS.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sample.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
api/psychrometricchart/: index.html
api/psychrometrics/: index.html
docs/api/: psychrometricchart.md  psychrometrics.md
example/: db_rh_tokyo_2023.csv  example.py
license/: index.html
search/: search_index.json
src/shimeri/: __init__.py  psychrometricchart.py  psychrometrics.py
